# excelcy

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  adhoc.py  nodemon.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
data/: api.xlsx  api.yml  storage.xlsx  storage.yml
excelcy/: __init__.py  cli.py  errors.py  excelcy.py  pipe.py  registry.py  storage.py  utils.py
tests/: test_base.py  test_data_trainer.py  test_errors.py  test_excelcy.py  test_pipe.py  test_readme.py  test_registry.py  test_storage.py
tests/data/: data1.xlsx  test_data_01.xlsx  test_data_01.yml  test_data_02.xlsx  test_data_03.xlsx  test_data_04.xlsx  test_data_05.xlsx  test_data_05a.xlsx  test_data_28.xlsx  ~$test_data_01.xlsx
tests/data/source/: source_01.txt  source_02.xlsx  source_03.xlsx
