[metadata]
name = 'excelcy'
version = '0.1.0'
description = ''
author = 'Robertus Johansyah'
author_email = 'me@kororo.co'
license = 'MIT'
url = 'https://github.com/_/excelcy'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
