[tool.poetry]
name = "excelcy"
version = "0.4.0"
description = "Excel Integration with SpaCy. Includes, Entity training, Entity matcher pipe."
authors = ["kororo <kororo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kororo/excelcy"
keywords = ["spacy", "spacy-pipeline", "spacy-nlp", "nlp", "python", "python3", "entity", "training", "excel", "xlsx",
    "spacy-extensions"]
packages = [
    { include = "excelcy" }
]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^20.1.0"
pyexcel = "^0.6.4"
pyexcel-xlsx = "^0.5.8"
pyyaml = "^5.3.1"
pytest-cov = { version = "^2.0" }
pytest = "^5.4.3"
spacy = "^2.3.2"

[tool.poetry.dev-dependencies]
textract = "^1.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
